[package]
name = "reme-transport"
version = "0.1.0"
edition = "2021"
publish = false

[lints]
workspace = true

[dependencies]
reme-bundle = { workspace = true }
reme-encryption = { workspace = true }
reme-identity = { workspace = true }
reme-message = { workspace = true }
reme-node-core = { workspace = true, optional = true }

derivative = { workspace = true }
derive_more = { workspace = true, features = ["display"] }
strum = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"] }
base64 = "0.22"
tracing = { workspace = true }
url = "2"
percent-encoding = "2"

# HTTP implementation
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
futures = { workspace = true }

# MQTT implementation
rumqttc = { version = "0.25", features = ["use-rustls"], optional = true }
uuid = { version = "1", features = ["v4"], optional = true }

# Hex encoding (for routing keys)
hex = "0.4"

# TLS + Certificate Pinning
rustls = { workspace = true, features = ["ring"] }
sha2 = { workspace = true }
webpki-roots = "1"
x509-parser = "0.17"

# Challenge generation
rand = { workspace = true }

# Optional: for server implementation
axum = { workspace = true, optional = true }
tower = { workspace = true, optional = true }

[features]
default = ["http-client"]
http-client = []
http-server = ["axum", "tower"]
mqtt = ["rumqttc", "uuid"]
embedded = ["reme-node-core"]

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
reme-encryption = { workspace = true }
axum = { workspace = true }
rand = { workspace = true }
wiremock = "0.6"
serde_json = "1"
